--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.17.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.8.0",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.24",
     "next": "^15.5.5",
