--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^2.8.0",
     "formidable": "^3.5.4",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.548.0",
     "next": "^15.5.5",
     "next-auth": "^4.24.11",
     "prisma": "^6.17.1",
